--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Lawn mower technical task",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "test": "mocha"
